removido a seção de testimonial, por conta da mesma estar dando problema com outras abas, como o destaque e o produtos

--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -115,3 +115,14 @@ button:hover {
 .hidden {
   display: none !important;
 }
+
+@keyframes fadeInTop {
+  from {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
